# esett-api

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/esett/: db.py  main.py  models.py  schemas.py
src/esett/api/: consumption.py  load_profile.py  prices.py  production.py
src/esett/static/: dashboard.js
src/esett/sync/: esett_client.py
src/expektra/: db.py  main.py
src/expektra/api/: consumption.py  load_profile.py  prices.py  production.py
src/expektra/static/: index.html  style.css
