[project]
name = "expektra"
version = "0.1.0"
description = "Time series data platform for Nordic energy market data from eSett"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "pydantic>=2.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.35",
    "ruff>=0.9",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/expektra"]

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"
reportMissingImports = true
pythonVersion = "3.13"

[tool.ruff.lint]
select = [
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]

[tool.ruff.lint.per-file-ignores]
"src/expektra/main.py" = ["B008"]    # Depends() in defaults is idiomatic FastAPI
"src/expektra/api/*.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.35",
]
